# Veyonix-

./: .dockerignore  .gitignore  .npmrc  .prettierignore  commitlint.config.js  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
Alpha/: README.md  package.json
Alpha/src/: App.tsx  SETUP_INSTRUCTIONS.md  backend-setup.md
Alpha/src/backend-setup/: README.md
Alpha/src/components/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Sidebar.tsx
Alpha/src/pages/: Dashboard.tsx  Login.tsx  Student.tsx
Alpha/src/services/: api.ts  authService.ts
apps/agent/: .gitignore  Cargo.toml
apps/agent/config/: agent.default.toml
apps/agent/crates/commands/: Cargo.toml
apps/agent/crates/commands/src/: dispatcher.rs  lib.rs  types.rs
apps/agent/crates/commands/src/handlers/: diagnostics.rs  focus_mode.rs  mod.rs  restart.rs  sync_policy.rs
apps/agent/crates/config/: Cargo.toml
apps/agent/crates/config/src/: lib.rs
apps/agent/crates/core/: Cargo.toml
apps/agent/crates/core/src/: lib.rs
apps/agent/crates/crypto/: Cargo.toml
apps/agent/crates/crypto/src/: aead.rs  challenge.rs  identity.rs  lib.rs  storage_key.rs
apps/agent/crates/enforcement/: Cargo.toml
apps/agent/crates/enforcement-app/: Cargo.toml
apps/agent/crates/enforcement-app/src/: enforcer.rs  lib.rs  monitor.rs  rule.rs
apps/agent/crates/enforcement-focus/: Cargo.toml
apps/agent/crates/enforcement-focus/src/: enforcer.rs  lib.rs  rule.rs  schedule.rs
apps/agent/crates/enforcement-usb/: Cargo.toml
apps/agent/crates/enforcement-usb/src/: enforcer.rs  lib.rs  registry.rs  rule.rs
apps/agent/crates/enforcement-website/: Cargo.toml
apps/agent/crates/enforcement-website/src/: enforcer.rs  hosts.rs  lib.rs  rule.rs
apps/agent/crates/enforcement/src/: engine.rs  error.rs  lib.rs  types.rs
apps/agent/crates/heartbeat/: Cargo.toml
apps/agent/crates/heartbeat/src/: sender.rs
apps/agent/crates/logging/: Cargo.toml
apps/agent/crates/logging/src/: lib.rs
apps/agent/crates/network/: Cargo.toml
apps/agent/crates/network/src/: client.rs  error.rs  lib.rs  models.rs  retry.rs
apps/agent/crates/policy/: Cargo.toml
apps/agent/crates/policy/src/: compiler.rs  error.rs  lib.rs  models.rs  store.rs  sync.rs  validator.rs
apps/agent/crates/scheduler/: Cargo.toml
apps/agent/crates/scheduler/src/: registry.rs
apps/agent/crates/storage/: Cargo.toml
apps/agent/crates/storage/src/: lib.rs  namespaces.rs
apps/agent/crates/telemetry/: Cargo.toml
apps/agent/crates/telemetry/src/: collector.rs  error.rs  flusher.rs  lib.rs  models.rs  queue.rs
apps/agent/crates/veyonix-agent/: Cargo.toml
apps/agent/crates/veyonix-agent/src/: main.rs  orchestrator.rs  service.rs
apps/agent/crates/websocket/: Cargo.toml
apps/agent/crates/websocket/src/: connection.rs  error.rs  lib.rs  message.rs  reconnect.rs
apps/backend/: .env.example  Dockerfile  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts
apps/backend/prisma/: migration.sql  schema.prisma  seed.ts
apps/backend/src/: app.ts  server.ts
apps/backend/src/bootstrap/: container.ts  plugins.ts  routes.ts
apps/backend/src/config/: agent.ts  database.ts  index.ts  jwt.ts  logger.ts  mail.ts  queues.ts  redis.ts  security.ts  storage.ts  swagger.ts
apps/backend/src/modules/devices/: index.ts
apps/backend/src/modules/devices/application/: index.ts
apps/backend/src/modules/devices/domain/: index.ts
apps/backend/src/modules/devices/infrastructure/: index.ts
apps/backend/src/modules/devices/presentation/: routes.ts
apps/backend/src/modules/identity/application/: index.ts
apps/backend/src/modules/identity/domain/: index.ts
apps/backend/src/presentation/: error-handler.ts
apps/backend/src/queues/: index.ts
apps/backend/src/shared/errors/: AppError.ts  DomainError.ts
apps/backend/src/shared/events/: bullmq-event-bus.ts  event-bus.interface.ts  event-bus.ts
apps/backend/src/shared/guards/: agent-crypto.guard.ts  agent.middleware.ts  auth.middleware.ts  correlation.middleware.ts  roles.guard.ts
apps/backend/src/shared/logger/: index.ts
apps/backend/src/shared/notifications/: notification.interface.ts
apps/backend/src/shared/pagination/: cursor.ts
apps/backend/src/shared/response/: envelope.ts
apps/backend/src/shared/storage/: local-storage.adapter.ts  storage.interface.ts
apps/backend/src/shared/utils/: crypto.ts  date.ts  hash.ts  id.ts
apps/backend/src/websocket/: gateway.ts  memory-registry.adapter.ts  redis-registry.adapter.ts  registry.interface.ts
apps/backend/src/websocket/workers/: command-dispatcher.worker.ts
apps/backend/tests/api/: setup.ts
apps/backend/tests/e2e/identity/: Auth.e2e.test.ts
apps/backend/tests/helpers/: index.ts
apps/backend/tests/helpers/factories/: role.factory.ts  user.factory.ts
apps/backend/tests/helpers/mocks/: MockAuditLogger.ts  MockPasswordHasher.ts  MockRefreshTokenRepository.ts  MockSessionRepository.ts  MockTokenService.ts  MockUserRepository.ts
apps/backend/tests/integration/: global-setup.ts  setup.ts
apps/backend/tests/integration/identity/: PrismaSessionRepository.test.ts  PrismaUserRepository.test.ts
apps/backend/tests/unit/devices/: AuthenticateDevice.usecase.test.ts  EnrollDevice.usecase.test.ts
apps/backend/tests/unit/identity/: LoginUser.usecase.test.ts  RegisterUser.usecase.test.ts
apps/backend/tests/unit/organizations/: CreateOrganization.usecase.test.ts  InviteUser.usecase.test.ts
apps/backend/tests/unit/policies/: GetDevicePolicyUseCase.test.ts  PolicyCompilerService.test.ts
apps/frontend/: package.json
apps/frontend/src/: index.css
apps/frontend/src/components/: Badge.tsx  StatCard.tsx  Table.tsx
apps/frontend/src/docs/: POSTGRESQL_SETUP.md
apps/frontend/src/pages/: AgentDetail.tsx  Agents.tsx  Dashboard.tsx  Devices.tsx  Login.tsx  Policies.tsx  Register.tsx  Reports.tsx  Settings.tsx
apps/frontend/src/styles/: globals.css
infra/docker/postgres/: init.sql
infra/docker/redis/: redis.conf
scripts/: scaffold.ps1
(+184 files in other folders)
