[package]
name = "veyonix-logging"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde_json.workspace = true
