[package]
name = "veyonix-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "veyonix-agent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
veyonix-config = { path = "../config" }
veyonix-logging = { path = "../logging" }
veyonix-core = { path = "../core" }
veyonix-crypto = { path = "../crypto" }
veyonix-storage = { path = "../storage" }
veyonix-network = { path = "../network" }
veyonix-policy = { path = "../policy" }
veyonix-websocket = { path = "../websocket" }
veyonix-commands = { path = "../commands" }
veyonix-telemetry = { path = "../telemetry" }
veyonix-heartbeat = { path = "../heartbeat" }
veyonix-scheduler = { path = "../scheduler" }
veyonix-enforcement = { path = "../enforcement" }
veyonix-enforcement-website = { path = "../enforcement-website" }
veyonix-enforcement-app = { path = "../enforcement-app" }
veyonix-enforcement-usb = { path = "../enforcement-usb" }
veyonix-enforcement-focus = { path = "../enforcement-focus" }
sysinfo = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
