[package]
name = "veyonix-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
